[package]
name = "sctp-proto-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sctp-proto]
path = ".."
features = ["_fuzz"]

[[bin]]
name = "fuzz_packet_unmarshal"
path = "fuzz_targets/fuzz_packet_unmarshal.rs"
test = false
doc = false
bench = false
